syntax = "proto3";

package protocol;

option go_package = "protocol";

message Head{
    enum MessageType {
        Request = 0;
        Response = 1;
        Heartbeat = 2;
    }

    int32 version = 1;
    MessageType message_type = 2;
    string serialize_type = 3;
    uint64 seq = 4;
}

message PkgHead {
    Head head = 1;
    string method = 2;
    map<string, string> meta =3;
}